# libhotpatch

./: Cargo.toml  README.md  build.rs
libhotpatch-derive/: Cargo.toml
libhotpatch-derive/src/: hotpatch_fn.rs  lib.rs
libhotpatch-macros/: Cargo.toml
libhotpatch-macros/src/: args.rs  lib.rs
src/: abi.rs  hotpatch.rs  lib.rs  lock.rs  os.rs  watcher.rs
src/abi/: boxed.rs  str.rs  time.rs
src/os/: unix.rs  windows.rs
tests/: hotpatch.rs  proc_macro.rs
tests/test-library/: Cargo.toml
tests/test-library/src/: lib.rs
