[workspace]
resolver = "2"
members = ["libhotpatch-derive", "tests/test-library"]
package.edition = "2024"
package.authors = ["Dasaav"]
package.repository = "https://github.com/Dasaav-dsv/libhotpatch"
package.license = "MIT OR Apache-2.0"

[package]
name = "libhotpatch"
version = "1.0.0"
edition.workspace = true
rust-version = "1.91"
authors.workspace = true
description = "Shared library live code reloading and hot-patching"
readme = "README.md"
repository.workspace = true
license.workspace = true

[dependencies]
libhotpatch-derive = { version = "0.1.0", path = "libhotpatch-derive" }
atomic-wait = "1.1"
libloading = "0.9"
log = { version = "0.4", features = ["std"] }
tempfile = "3.23"
linkme = "0.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
] }

[profile.dev.package.xxhash-rust]
opt-level = 3
